draft GUI layout and use logback for logging

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>miglayout</artifactId>
             <version>3.7.4</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 
     <build>
