generate code coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: scala
+
 notifications:
   # Email notifications are disabled, the README contains a link to the CI build status.
   # See http://about.travis-ci.org/docs/user/build-configuration/ to configure
   email: false
+
+script:
+  - sbt clean coverage test coverageReport
