Make TemperatureGauge more area responsive, use more common unicode degree character

--- a/src/main/resources/peregin/gpv/gui/dashboard/CyclingComplexDashboard.yaml
+++ b/src/main/resources/peregin/gpv/gui/dashboard/CyclingComplexDashboard.yaml
@@ -42,7 +42,8 @@ gauges:
     clazz: peregin.gpv.gui.gauge.TemperatureGauge
     x: 0.9
     y: 0.15
-    size: *SIZE
+    width: 0.1
+    height: *SIZE
   - name: progress
     clazz: peregin.gpv.gui.gauge.DistanceAndDurationGauge
     x: 0.8
